# nyx-common-linux-modules

./: .gitignore  Makefile.am  README  configure.ac
modules/: Makefile.am
modules/battery/: Makefile.am  module.c
modules/charger/: Makefile.am  module.c
modules/led_controller/: Makefile.am  module.c
modules/system/: Makefile.am  module.c
